style: fix line height in text for improved readability and consistency

--- a/css/daily.css
+++ b/css/daily.css
@@ -3,14 +3,12 @@
 #daily {
   padding: 200px 100px;
 }
-
-.dailycontainer {
-  /* 1140px */
-  max-width: 120rem;
-  margin-left: -3rem;
-
+  .dailycontainer {
+    /* 1140px */
+    max-width: 120rem;
+    margin-left:-3rem;
+  
 }
-
 .exercisetips {
   font-size: 34px;
   font-family: "Montserrat", sans-serif;
@@ -18,9 +16,8 @@
   color: #c2c0c0;
   margin-top: 10px;
   text-transform: uppercase;
-
+  
 }
-
 .exercisetips-reverse {
   font-size: 34px;
   font-family: "Montserrat", sans-serif;
@@ -29,25 +26,21 @@
   margin-top: 10px;
   margin-left: -3rem;
   text-transform: uppercase;
-}
-
+}  
 .grid-container {
   display: grid;
-  grid-template-columns: 1fr 2fr;
-  /* The first column is thinner (1/3) and the second is wider (2/3) */
+  grid-template-columns: 1fr 2fr; /* The first column is thinner (1/3) and the second is wider (2/3) */
 }
 
 .thin-column {
   grid-column: 1;
 }
-
 .grid-container-reverse {
   display: grid;
-  grid-template-columns: 2fr 1fr;
-  /* The first column is thinner (1/3) and the second is wider (2/3) */
+  grid-template-columns: 2fr 1fr; /* The first column is thinner (1/3) and the second is wider (2/3) */
 }
 
-.thin-column-reverse {
+.thin-column-reverse{
   grid-column: 1;
 }
 
@@ -62,16 +55,16 @@
   text-transform: uppercase;
   letter-spacing: 1px;
 }
-
 .daily-description {
   font-family: "Montserrat", sans-serif;
   font-size: 18px;
-  line-height: 1.5;
+  line-height: 2;
   letter-spacing: -0.5px;
   margin-bottom: 40px;
   padding: 40px;
   margin-left: -5rem;
 }
+
 
 .daily-img {
   position: relative;
@@ -83,14 +76,12 @@
   width: 70%;
   border-radius: 10px;
 }
-
 .daily02-img-box {
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
+} 
 .daily02-img {
   width: 60%;
   border-radius: 8px;
